-add tag p in project

--- a/index.html
+++ b/index.html
@@ -10,5 +10,11 @@
 		<a href='https://www.google.com'>
 			read more
 		</a>
+		<p>
+			lorem this is test for git lorem this is test for gitlore
+			this is test for gitlorem this is te
+			st for gitlorem this is test for gitlorem
+			this is test for gitlorem this is test for git
+		</p>
 	</body>
 </html>
